fix: Removed white space under tv shows and movies, also added Reviews page

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html body{
   padding: 0;
   background-color:rgb(236, 234, 240);
 
+
 }
 
 nav{
@@ -45,6 +46,8 @@ nav .current a{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding-bottom: 100px;
+  overflow: hidden;
 }
 
 .img{
